--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <figure alt="digital marketing meeting"></figure>
     <article>
         <div>
-            <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" />
+            <img id="search-engine-optimization" src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
